# practice-quiz

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: deploy.yml  playwright.yml
assets/: main.css  quiz-schema.json
examples/: sample-quiz.json
src/: main.rs  model.rs
src/components/: config.rs  filter_section.rs  mod.rs  quiz.rs  results.rs  upload.rs
tests/: quiz.spec.ts
